# mcp_factory

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/mcp-factory-core/: Cargo.toml
crates/mcp-factory-core/src/: config.rs  error.rs  lib.rs  server.rs
crates/mcp-factory-core/src/auth/: login.rs  mod.rs  oauth2.rs  provider.rs  token_store.rs
crates/mcp-factory-core/src/graphql/: mod.rs
crates/mcp-factory-core/src/resources/: mod.rs
crates/mcp-factory-core/src/rest/: mod.rs
crates/mcp-factory-core/src/tools/: mod.rs
crates/mcp-factory-core/src/transport/: mod.rs
crates/mcp-factory-core/tests/: auth_oauth.rs  graphql_proxy.rs  mcp_handler.rs  rest_proxy.rs  transport_http.rs  transport_stdio.rs
crates/mcp-factory-core/tests/common/: mod.rs
crates/mcp-factory-core/tests/support/: stdio_smoke.rs
examples/graphql-example/: Cargo.toml  config.toml  mcp-gen.manifest.json
examples/graphql-example/src/: main.rs  resources.rs  tools.rs
examples/petstore-openapi/: Cargo.toml  config.toml  mcp-gen.manifest.json
examples/petstore-openapi/src/: main.rs  resources.rs  tools.rs
generator/: .coverage  README.md  pyproject.toml
generator/mcp_gen/: __init__.py  cli.py  models.py  packaging.py  paths.py  render.py
generator/mcp_gen/graphql/: __init__.py  parser.py
generator/mcp_gen/openapi/: __init__.py  parser.py
generator/mcp_gen/templates/: Cargo.toml.j2  config.toml.j2  main.rs.j2  resources.rs.j2  tools.rs.j2
generator/tests/: conftest.py
generator/tests/e2e/: test_generate.py
generator/tests/fixtures/: deprecated-openapi.yaml  introspection.json  minimal-openapi.yaml  minimal.graphql  nested-inputs.graphql  params-openapi.yaml  refs-openapi.yaml  tagged-openapi.yaml
generator/tests/golden/: test_golden.py
generator/tests/golden/minimal-openapi/: Cargo.toml  tools.rs
generator/tests/unit/: test_cli.py  test_graphql_parser.py  test_models.py  test_openapi_parser.py  test_packaging.py  test_paths.py
scripts/: docker-mcp-gen-inner.sh  package-linux-amd64.sh
tests/e2e/: run.sh
