[workspace]
resolver = "2"
members = ["crates/mcp-factory-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["MCP Factory Contributors"]

[workspace.dependencies]
mcp-factory-core = { path = "crates/mcp-factory-core" }
rmcp = { version = "2.0", features = [
    "server",
    "schemars",
    "transport-io",
    "transport-streamable-http-server",
    "reqwest",
] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonschema = "0.29"
percent-encoding = "2"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
oauth2 = { version = "5", features = ["reqwest"] }
clap = { version = "4", features = ["derive"] }
open = "5"
async-trait = "0.1"
