[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-gen"
version = "0.1.0"
description = "Generate MCP proxy servers from OpenAPI and GraphQL schemas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.27.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "prance>=26.7.19.0",
    "openapi-spec-validator>=0.9.0",
    "graphql-core>=3.2.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[project.scripts]
mcp-gen = "mcp_gen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["mcp_gen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["mcp_gen"]
branch = true

[tool.coverage.report]
fail_under = 85
