[workspace]

[package]
name = "graphql-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-factory-core = { path = "../../crates/mcp-factory-core" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "graphql-mcp"
path = "src/main.rs"