[workspace]

[package]
name = "minimal-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-factory-core = { path = "<CORE>" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "minimal-mcp"
path = "src/main.rs"